# brave-core

./: BUILD.gn  DEPS  package-lock.json  package.json
.github/: CODEOWNERS
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  brave_strings.grd  generated_resources.grd  os_settings_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client_browsertest.cc  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc
common/: BUILD.gn  brave_switches.cc  brave_switches.h  pref_names.cc  pref_names.h  url_constants.cc  url_constants.h  webui_url_constants.cc  webui_url_constants.h
components/: autofill_payments_strings.grdp  autofill_strings.grdp  browsing_data_strings.grdp  components_strings.grd  page_info_strings.grdp  password_manager_strings.grdp
components/brave_sync/aws/: BUILD.gn  aws_helper.cc  aws_helper.h  aws_http_client.cc  aws_http_client.h  aws_http_client_factory.cc  aws_http_client_factory.h
extensions/: BUILD.gn
ios/browser/prefs/: BUILD.gn  browser_prefs.mm
ios/browser/sync/: BUILD.gn
patches/: base-android-java-src-org-chromium-base-CommandLine.java.patch  chrome-VERSION.patch  chrome-android-chrome_public_apk_tmpl.gni.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-settings-sync-ManageSyncSettings.java.patch  chrome-android-java-src-org-chromium-chrome-browser-sync-settings-ManageSyncSettings.java.patch  chrome-browser-resources-md_extensions-manager.html.patch  chrome-browser-resources-settings-appearance_page-appearance_page.js.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-resources-settings-privacy_page-security_page.html.patch  chrome-browser-resources-settings-site_settings-category_default_setting.js.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-startup-bad_flags_prompt.cc.patch  chrome-common-BUILD.gn.patch  components-signin-internal-identity_manager-primary_account_manager.cc.patch  components-sync-BUILD.gn.patch  components-sync-android-java-src-org-chromium-components-sync-AndroidSyncSettings.java.patch  components-sync-base-sync_prefs.cc.patch  components-sync-driver-profile_sync_service.cc.patch  components-sync-driver-sync_session_durations_metrics_recorder.cc.patch  components-sync-engine-net-http_bridge.cc.patch  components-sync-engine-net-http_bridge.h.patch  components-sync-engine-net-http_post_provider_interface.h.patch  components-sync-engine_impl-net-sync_server_connection_manager.cc.patch  components-sync_bookmarks-bookmark_change_processor.cc.patch  components-sync_bookmarks-bookmark_model_associator.cc.patch  components-sync_bookmarks-bookmark_model_associator.h.patch  extensions-browser-BUILD.gn.patch  extensions-browser-extension_event_histogram_value.h.patch  extensions-common-api-_api_features.json.patch  google_apis-gaia-gaia_urls.cc.patch  third_party-blink-renderer-core-frame-navigator.cc.patch  (+2 more)
script/: brave_license_helper.py  sign_widevine.py
(+291 files in other folders)
